trying to fix spacing issues

--- a/FullWidthTabs/styles.css
+++ b/FullWidthTabs/styles.css
@@ -46,7 +46,13 @@ body {
   clear: both;
 }
 nav {
-	height: 6em;
+	height:auto;
+}
+.content {
+  margin-top: 2em;
+}
+.container {
+  display: block;
 }
 nav ul li {
   display: inline-block;
@@ -54,12 +60,12 @@ nav ul li {
   width: 16%;
 	margin-left: .15em;
 	margin-right: .15em;
-	height: 100%;
-  padding-top: .7em;
-  padding-bottom: .5em;
+  padding-top: ;
+  padding-bottom: ;
   border-left: 1px solid lightgrey;
   border-right: 1px solid lightgrey;
   border-top: 1px solid lightgrey;
+  position: relative;
 }
 .info {
   text-align: center;
@@ -69,37 +75,24 @@ span:hover {
 }
 span {
   height: 100%;
-}
-.tab1 span:before {
-    content: ;
-}
-.tab2 span:before {
-  content: ;
-}
-.tab3 span:before {
-  content: ;
-}
-.tab4 span:before {
-  content:
-}
-.tab5 span:before {
-  content:
+  color: lightgrey;
 }
 nav ul {
   text-align: center;
   border-bottom: 1px solid lightgrey;
-  margin-top: 3.5em;
+  margin-top: 3em;
+  margin-bottom: -.3em;
 }
 
 a {
 	/*display: block;*/
   padding-right: 1.15em;
   padding-left: 1.15em;
-  hover: pointer;
   padding-top: .7em;
-  padding-bottom: .5em;
+  padding-bottom: .6em;
   text-decoration: none;
-  line-height: 1;
+  line-height: 2.5;
+  white-space: nowrap;
 
 }
 img {
@@ -110,7 +103,9 @@ img {
   border-left: 1px solid cornflowerblue;
   border-right: 1px solid cornflowerblue;
   border-bottom: 1px solid white;
-  padding-top: .5em;
+  padding-top: -.3em;
+  box-sizing: border-box;
+  padding-bottom: ;
 }
 .tab-current span {
 	color: cornflowerblue;
